# A-First-Course-in-Computational-Physics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
diskette/: README.DOC
src/: 00_hello.f90  01_average.f90  02_plotting_test.f90  03_plotting_classic_curves.f90
